# C9MagangBanyubramanta_Hilmi-Taqiyuddin-Haq

./: README.md  cv_filter.cpp
src/box_simulation/: CMakeLists.txt
src/box_simulation/launch/: box_simulation.launch.py
src/box_simulation/models/box_panjang/: model.sdf
src/box_simulation/models/camera_frustum/: model.config  model.sdf
src/box_simulation/models/camera_frustum/meshes/: frustum.dae
src/box_simulation/src/: box_control_plugin.cpp
src/box_simulation/worlds/: underwater.world
src/controller/: CMakeLists.txt
src/controller/src/: controller.cpp  package.xml  readme.txt
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/launch/: simulator.py
src/gazebo_sim/models/model_box/: model.sdf
src/gazebo_sim/models/model_camera/: model.config  model.sdf
src/gazebo_sim/models/model_camera/meshes/: frustum.dae
src/gazebo_sim/src/: controller.cpp  controller_box.cpp
src/gazebo_sim/worlds/: restoring_moment.world
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Control.msg  Object.msg
src/opencvros2/: CMakeLists.txt  package.xml
src/opencvros2/src/: opencvros2.cpp  openvino.cpp
src/serial_cmd/: CMakeLists.txt  package.xml
src/serial_cmd/src/: serial_node.cpp
yolo/: CMakeLists.txt  package.xml
yolo/log/: latest_list
yolo/resources/openvino/: best.xml
yolo/src/: detection.cpp  mask.cpp  raw.cpp
