<?xml version="1.0"?>
<package format="3">
  <name>yolo</name>
  <version>0.0.0</version>
  <description>YOLO Detection Package</description>

  <maintainer email="taqiyuddinhaq@gmail.com">taqi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>vision_msgs</depend>

  <export>
  </export>
</package>
