<?xml version="1.0"?>
<package format="3">
  <name>serial_cmd</name>
  <version>0.0.1</version>
  <description>Send /cmd_vel to serial port /dev/ttyACM0</description>

  <maintainer email="taqiyuddinhaq@gmail.com">Taqi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
